[gd_scene load_steps=4 format=3 uid="uid://cxatb4gog61ss"]

[ext_resource type="Script" path="res://Scene/ui.gd" id="1_ygtv4"]
[ext_resource type="Script" path="res://Scene/ValueBase.gd" id="2_j8of5"]

[sub_resource type="Theme" id="Theme_4hwph"]
default_font_size = 15
GridContainer/constants/h_separation = 15
GridContainer/constants/v_separation = 2
HBoxContainer/constants/separation = 15
VBoxContainer/constants/separation = 2

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4hwph")
script = ExtResource("1_ygtv4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270222, 0.270222, 0.270222, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "EPC01 - Language File Changer"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Absolute path to dir (default: .../cfn-code/):"

[node name="BasePath" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="SpecificPath" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.533037, 0.533037, 0.533037, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CategorySwitch" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
button_pressed = true
text = "Software"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Found languages file:"

[node name="LanguageFileFound" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/v_separation = 10
columns = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Search"

[node name="SearchInput" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="KeyList" type="ItemList" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Value (English):"

[node name="ValueLabelValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Info:"

[node name="InfoEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LayoutLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer" groups=["firmware"]]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Layout:"

[node name="LayoutEdit" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer" groups=["firmware"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="FieldLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer" groups=["firmware"]]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Field:"

[node name="FieldEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer" groups=["firmware"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Add"

[node name="ChangeButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Change"

[node name="RemoveButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Remove"

[node name="ValueChangerDialog" type="ColorRect" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0.270588, 0.270588, 0.270588, 1)
script = ExtResource("2_j8of5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ValueChangerDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/ValueChangerDialog/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleValue" type="Label" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title"

[node name="CloseButton" type="Button" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "(x) Close"

[node name="AttributesGrid" type="GridContainer" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="KeyLabel" type="Label" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Key:"

[node name="KeyContainer" type="HBoxContainer" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KeyEdit" type="LineEdit" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid/KeyContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateKey" type="Button" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid/KeyContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Create Key"

[node name="InfoLabel" type="Label" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid"]
layout_mode = 2
text = "Info:"

[node name="InfoEdit" type="LineEdit" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid"]
layout_mode = 2

[node name="FieldLabel" type="Label" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid"]
layout_mode = 2
text = "Field:"

[node name="FieldEdit" type="LineEdit" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid"]
layout_mode = 2

[node name="LayoutLabel" type="Label" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid"]
layout_mode = 2
text = "Layout:"

[node name="LayoutEdit" type="OptionButton" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ValuesGrid" type="GridContainer" parent="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/BasePath" to="." method="_on_base_path_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CategorySwitch" to="." method="_on_category_switch_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/SearchInput" to="." method="_on_search_input_text_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/GridContainer/KeyList" to="." method="_on_key_list_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/GridContainer/KeyList" to="MarginContainer/VBoxContainer/GridContainer" method="_on_key_list_item_selected"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/InfoEdit" to="." method="_on_input_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/GridContainer/LayoutEdit" to="." method="_on_layout_edit_item_selected"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/FieldEdit" to="." method="_on_input_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/ChangeButton" to="." method="_on_change_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="added_new_key" from="MarginContainer/ValueChangerDialog" to="." method="_on_value_changer_dialog_added_new_key"]
[connection signal="pressed" from="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/CloseButton" to="MarginContainer/ValueChangerDialog" method="_on_close_button_pressed"]
[connection signal="text_changed" from="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid/KeyContainer/KeyEdit" to="MarginContainer/ValueChangerDialog" method="_on_key_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/ValueChangerDialog/MarginContainer/ScrollContainer/VBoxContainer/AttributesGrid/KeyContainer/CreateKey" to="MarginContainer/ValueChangerDialog" method="_on_create_key_pressed"]
